--- a/css/style.css
+++ b/css/style.css
@@ -123,7 +123,7 @@ a {
     vertical-align: top;
     background-color: #a6967f;
     background-repeat: no-repeat;
-    background-position: center center;
+    background-position: top center;
     background-size: cover;
     font-size: 12px;
 }
@@ -133,11 +133,11 @@ a {
 }
 
 .best-section .photo-block {
-    background-image: url("../img/header-banner.jpg");
+    background-image: url("../img/index/photo-miniatures/photo-example1.jpg");
 }
 
 .best-section .music-block {
-    background-image: url("../img/header-banner.jpg");
+    background-image: url("../img/index/album-miniatures/ImagineDragonsNightVisions.jpg");
 }
 
 .best-section .story-block p {
@@ -203,6 +203,7 @@ a {
     -o-transform: rotate(180deg);
     transform: rotate(180deg);
 }
+/*end: condition of .description-bg visibility*/
 
 .description-bg .attentica-content-title {
     margin-top: 10px;
@@ -291,11 +292,67 @@ a {
     text-align: center;
 }
 
+.big-photo-section {
+    position: relative;
+    padding: 40px 0;
+}
 
+.big-photo-section .fotorama {
+    margin: 0 130px;
+}
 
+/*semicircle-shape*/
+.semicircle-shape {
+    position: absolute;
+    width: 160px;
+    height: 110px;
+    overflow: hidden;
+}
 
+.semicircle-shape .square {
+    position: relative;
+    float: left;
+    width: 105px;
+    height: inherit;
+    background-color: #edece9;
+    overflow: visible;
+    white-space: nowrap;
+    z-index: 10;
+}
 
+.semicircle-shape .circle {
+    position: absolute; left: 50px; top: 1px;
+    float: left;
+    width: 94px;
+    height: 94px;
+    background-color: #edece9;
+    border-radius: 50%;
+    border: 7px solid #a6967f;
+    z-index: 5;
+}
 
+.semicircle-shape .author-title {
+    margin-top: 20px;
+    font-family: "Attentica-4F", "Attentica4F-UltraLight", serif;
+    font-size: 36px;
+
+}
+
+.semicircle-shape .section-title, .semicircle-shape .subsection-title {
+    font-size: 15px;
+    line-height: 15px;
+}
+/*end: semicircle-shape*/
+
+.big-photo-section .semicircle-shape {
+    top: 90px;
+    margin-left: 25px;
+}
+
+.recently-section {
+    position: relative;
+    background-color: #ddd;
+}
 
 
 
